# DeepFlow-Engine

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-checks.yml  ci-testing.yml  release-pypi.yml
docs/: 00-basics.md  01-events.md  02-fps.md
example/: main.py
scripts/: credits.sh
silence/: alpha.py  collisions_log.json  generate_video.py  main.py  original_game.py  will_it_work.py
src/deepflow/: __init__.py  collisions.py  constants.py  game.py  renderer.py
src/deepflow/errors/: __init__.py
src/deepflow/publisher/: __init__.py  base.py  telegram.py
src/deepflow/sample_game/: learning_pygame.py
src/deepflow_engine/: __init__.py  constants.py  game.py  renderer.py  utils.py
src/deepflow_engine/core/: engine.py  event.py  game.py  pipeline.py  renderer.py
src/deepflow_engine/errors/: __init__.py
src/deepflow_engine/publisher/: __init__.py  base.py  telegram.py
src/deepflow_engine/sample_game/: learning_pygame.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_collisions.py  test_constants.py
