[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.10.8,<0.11" ]

[project]
name = "deepflow-engine"
version = "0.1.0"

description = "Automated frame-by-frame rendering and video synthesis for physics simulations and generative game shorts."
readme = "README.md"
authors = [
  { name = "deependujha", email = "deependujha21@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "moviepy>=2.2.1",
  "pygame>=2.6.1",
  "pytelegrambotapi>=4.32",
]
scripts.deepflow-engine = "deepflow_engine:main"
scripts.deepflow_engine = "deepflow_engine:main"

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pyright>=1.1.350",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-xdist>=3.3.1",
  "ruff>=0.3",
]

[tool.pytest.ini_options]
addopts = "-v --strict-markers --tb=short"
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "slow: Slow tests",
]
minversion = "7.0"
python_classes = [ "Test*" ]
python_files = [ "test_*.py", "*_test.py" ]
python_functions = [ "test_*" ]
testpaths = [ "tests" ]

[tool.coverage.run]
branch = true
source = [ "src/deepflow" ]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
ignore_missing_imports = true
packages = [ "deepflow_engine" ]
python_version = "3.12"
